# CAAT-Shell

./: Cargo.toml
doc/: shell.md  what-people-are-saying.md
python/: test.py
scripts/: lockscreen-original.sh  lockscreen.sh  wallpaper-original.sh  wallpaper.sh
src/: main.rs
src/builtins/: background.rs  cd.rs  conditionals.rs  echo.rs  list_utils.rs  ls.rs  map.rs  mod.rs  numbers.rs  search.rs  strings.rs
src/eval/: mod.rs
src/parser/: lexer.rs  mod.rs  parser.rs  peg_parser.rs  shell.lalrpop
src/shell/: function.rs  job_manager.rs  mod.rs
