[package]
name = "caat_shell"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
caat_rust = { git = "https://github.com/Ki11erRabbit/caat_rust.git" }
peg = "0.8.2"
chrono = "0.4.34"
regex = "1.10.3"
rand = "0.8.5"
rustyline = "13.0.0"
either = "1.10.0"

